config/manager/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coraza-controller-manager
  namespace: coraza-system
  labels:
    control-plane: coraza-controller-manager
    app.kubernetes.io/name: coraza
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      control-plane: coraza-controller-manager
      app.kubernetes.io/name: coraza
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: coraza-controller-manager
        app.kubernetes.io/name: coraza
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - command:
            - /manager
          args:
            - --leader-elect
            - --health-probe-bind-address=:8081
            - --envoy-cluster-name=outbound|80||coraza-controller-manager.coraza-system.svc.cluster.local
            - --cache-gc-interval=3s
          image: ghcr.io/shaneutt/coraza-kubernetes-operator:dev
          imagePullPolicy: IfNotPresent
          name: manager
          ports: []
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 64Mi
          volumeMounts: []
      volumes: []
      serviceAccountName: coraza-controller-manager
      terminationGracePeriodSeconds: 10
